--- a/app/src/main/res/layout/fragment_followers.xml
+++ b/app/src/main/res/layout/fragment_followers.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.detail.FollowersFragment">
+    tools:context=".ui.detail.fragment.FollowersFragment">
 
     <TextView
         android:layout_width="wrap_content"
