--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -2,8 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-    android:id="@+id/setting"
-    android:icon="@drawable/baseline_settings_24"
-    android:title="@string/setting"
-    app:showAsAction="ifRoom" />
+        android:id="@+id/setting"
+        android:icon="@drawable/baseline_settings_24"
+        android:title="@string/setting"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/favoriteUser"
+        android:icon="@drawable/baseline_favorite_24"
+        android:title="@string/favorite"
+        app:showAsAction="collapseActionView|ifRoom" />
 </menu>
